--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "@mui/lab": "5.0.0-alpha.46",
-    "@mui/material": "5.0.0-rc.0",
+    "@mui/material": "^5.0.0-rc.0",
     "@types/react": "17.0.21",
     "axios": "0.21.4",
     "date-fns": "2.23.0",
     "dayjs": "1.10.7",
-    "jquery": ">=1.8.0",
+    "jquery": "3.6.0",
     "luxon": "1.28.0",
     "mobx": "6.3.2",
     "mobx-react-lite": "3.2.1",
     "moment": "2.29.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "react-slick": "0.28.1",
+    "slick-carousel": "1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
