--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "@mui/lab": "5.0.0-alpha.46",
-    "@mui/material": "^5.0.0-rc.0",
+    "@mui/material": "5.0.0-rc.0",
+    "@mui/styles": "^5.0.0-rc.0",
     "@types/react": "17.0.21",
     "axios": "0.21.4",
     "date-fns": "2.23.0",
