--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@babel/core": "7.15.5",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
-    "@mui/icons-material": "^5.0.0-rc.0",
+    "@mui/icons-material": "5.0.0-rc.0",
     "@mui/lab": "5.0.0-alpha.46",
     "@mui/material": "5.0.0-rc.0",
     "@mui/styles": "5.0.0-rc.0",
     "@types/react": "17.0.21",
     "axios": "0.21.4",
+    "chart.js": "^3.1.0",
     "date-fns": "2.23.0",
     "dayjs": "1.10.7",
     "jquery": "3.6.0",
@@ -20,6 +21,7 @@
     "mobx-react-lite": "3.2.1",
     "moment": "2.29.1",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
     "react-slick": "0.28.1",
     "slick-carousel": "1.8.1"
