--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.15.5",
+    "@babel/runtime": "^7.15.4",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
     "@mui/icons-material": "5.0.0-rc.0",
@@ -12,7 +13,7 @@
     "@mui/styles": "5.0.0-rc.0",
     "@types/react": "17.0.21",
     "axios": "0.21.4",
-    "chart.js": "^3.1.0",
+    "chart.js": "3.5.1",
     "date-fns": "2.23.0",
     "dayjs": "1.10.7",
     "jquery": "3.6.0",
@@ -21,9 +22,11 @@
     "mobx-react-lite": "3.2.1",
     "moment": "2.29.1",
     "react": "17.0.2",
-    "react-chartjs-2": "^3.0.4",
+    "react-chartjs-2": "3.0.4",
     "react-dom": "17.0.2",
     "react-slick": "0.28.1",
+    "react-swipeable-views": "0.14.0",
+    "react-swipeable-views-utils": "0.14.0",
     "slick-carousel": "1.8.1"
   },
   "scripts": {
